Fixes
- TTS improvements
- Displaying chip errors
- Improving log format